# light_painting

./: .gitignore  CMakeLists.txt  README.md  package.xml  support.rosinstall
arduino_control/: .gitignore  README.md
arduino_control/Py_to_ino_Light_ON_OFF_test/: Py_to_ino_Light_ON_OFF_test.ino
arduino_control/RGB_led_control/: RGB_led_control.ino  b_setup.ino  c_run.ino
arduino_control/grayscale/: grayscale.ino
arduino_control/light_painting/: light_painting.ino
arduino_control/light_painting/Py_to_ino_Light_ON_OFF_test/: Py_to_ino_Light_ON_OFF_test.ino
arduino_control/light_painting/RGB_led_control/: RGB_led_control.ino
arduino_control/light_painting/dimming_led/: dimming_led.ino
arduino_control/serial_led_control/: serial_led_control.ino
data/binary/: block-O_10x10.tif  white_rim_3x3.tif
data/grayscale/: radial_gradient_9x9.tif  sweep_3x3.tif
launch/: light_painting.launch  simple_line_motion_server.launch  t1_execute.launch  t2_led_paintbrush.launch
light_painting/: package.xml
light_painting/action/: SimpleMoveRequest.action
light_painting/arduino_control/: README.md
light_painting/arduino_control/RGB_led_control/: a_declarations.ino
light_painting/data/binary/: square_512x512.tif
light_painting/data/color/: block_o_RGB.tif  green_cross.tif
light_painting/data/grayscale/: cloud_16x16.tif  sweep_10x11.tif  sweep_3x5.tif
light_painting/launch/: t1_execute.launch  t1_initialize.launch
light_painting/scripts/: imageLoader.py  lightPainter.py  robotControl_SimpleMover.py  serial_node.py
light_painting_gui/: .gitignore  CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
light_painting_gui/resource/: LightPaintingPlugin.ui
light_painting_gui/scripts/: light_painting_gui
light_painting_gui/src/light_painting_module/: lp_gui.py
lp_support/: CMakeLists.txt  package.xml
lp_support/launch/: load_lp_eef.launch  test_lp_eef.launch
lp_support/meshes/: light_paint_collision.stl  light_paint_visual.stl
lp_support/urdf/: light_paint.xacro  light_paint_macro.xacro
msg/: BinaryState.msg  GrayScale.msg  RGBState.msg
scripts/: Binary_values_publisher.py  GrayScale_values_publisher.py  No_Descartes_Robot_Motion.py  RGB_no_descartes_robot_motion.py  RGB_values_publisher.py  binary_no_descartes_robot_motion.py  grayscale_no_descartes_robot_motion.py  imageLoader.py  image_inputs.py  image_processing.py  lightPainter.py  no_descartes_robot_motion.py  paintPublisher.py  pixel_value_publisher.py  py_to_ino_LIGHT_ON_OFF_test.py  py_to_ino_RGB_LED_test.py  robotControl_SimpleMover.py  robot_control.py  robot_motion.py
scripts/images/RGB/: mario  mario_8bit.tif  sundayInPark.tif
scripts/images/binary/: AIMS_20x5.tif  plus_sign_3x3.tif  smiley_circle_512x512.tif  white_rim_3x3.tif  white_rim_4x3.tif
scripts/images/grayscale/: gauss_1x10.tif  sweep.tif  sweep_8x5.tif
src/descartes_motion_action_server/: run_server.cpp
test/: py_to_ino_DIMMABLE_Light_TEST.py  py_to_ino_LIGHT_ON_OFF_test.py
trash/: Binary_values_publisher.py  RGB_no_descartes_robot_motion.py  RGB_values_publisher.py  binary_no_descartes_robot_motion.py  grayscale_no_descartes_robot_motion.py  py_to_ino_RGB_LED_test.py
