<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>light_painting</name>
    <version>0.0.1</version>
    <description>
        <p>PROJECT: "Light Painting"</p>
    </description>
    <author>LuisMartinez</author>
    <author>acbuynak</author>
    <maintainer email="luiscmartinez18@gmail.com">LuisMartinez</maintainer>
    <license>Apache 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>moveit_core</build_depend>
    <build_depend>moveit_ros_planning</build_depend>
    <build_depend>moveit_ros_planning_interface</build_depend>
    <build_depend>moveit_visual_tools</build_depend>

    <build_depend>descartes_core</build_depend>
    <build_depend>descartes_moveit</build_depend>
    <build_depend>descartes_planner</build_depend>
    <build_depend>descartes_trajectory</build_depend>
    <build_depend>descartes_utilities</build_depend>
    <build_depend>trajectory_msgs</build_depend>

    <test_depend>roslaunch</test_depend>

    <exec_depend>motoman_mh5_support</exec_depend>
    <exec_depend>moveit_visual_tools</exec_depend>
    <exec_depend>rviz</exec_depend>

    <exec_depend>descartes_core</exec_depend>
    <exec_depend>descartes_moveit</exec_depend>
    <exec_depend>descartes_planner</exec_depend>
    <exec_depend>descartes_trajectory</exec_depend>
    <exec_depend>descartes_utilities</exec_depend>
    <exec_depend>trajectory_msgs</exec_depend>
    <exec_depend>moveit_kinematics</exec_depend>

    <export>
        <architecture_independent/>
    </export>
</package>
