<?xml version="1.0"?>
<package format="2">
    <name>light_painting_gui</name>
    <version>0.0.1</version>
    <description>
        <p>PROJECT: "Light Painting: GUI support tool"</p>
    </description>

    <author>A.C. Buynak</author>
    <maintainer email="buynak.9@osu.edu">A.C. Buynak (AIMS Lab @ The Ohio State University)</maintainer>
    <license>Apache 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>rqt_gui</build_export_depend>
    <build_export_depend>rqt_gui_py</build_export_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>rqt_gui</exec_depend>
    <exec_depend>rqt_gui_py</exec_depend>

    <export>
        <architecture_independent/>
        <!-- Other tools can request additional information be placed here -->
        <rqt_gui plugin="${prefix}/plugin.xml" />
    </export>
</package>
