<?xml version="1.0"?>
<package format="2">
  <name>lp_support</name>
  <version>0.0.1</version>
  <description>
    <p>EEF Support Package for the Light Painting Project</p>
    <p>
      <b>Configuration:</b>
    </p>
    <ul>
      <li>MH5 - Compatible with Long and Short Variant</li>
      <li>GP7</li>
    </ul>
  </description>
  <author>sasmith</author>
  <maintainer email="smith.15485@osu.edu">sasmith</maintainer>
  <license>Apache 2.0</license>

  <url type="bugtracker">https://github.com/osu-aims/aims-robots-all/issues</url>
  <url type="repository">https://github.com/osu-aims/aims-robots-all</url>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>roslaunch</test_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>